<resources>
    <!-- App Name -->
    <string name="app_name" translatable="false">SolarPanelSystem</string>

    <!-- Global Buttons -->
    <string name="btn_add">ADD</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_create">Create</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_ok">OKAY</string>
    <string name="btn_yes">yes</string>
    <string name="btn_no">no</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_skip">SKIP NOW</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_get_started">GET STARTED</string>
    <!-- END Global Buttons -->

    <!-- Global Labels -->
    <string name="label_no_data">No data to show. Press + button to add a new one.</string>

    <!-- END Global Labels -->

    <!-- Global Messages -->
    <string name="msg_are_u_sure">Are You Sure?</string>
    <string name="msg_confirm_delete">"Do you really want to delete this?"</string>
    <string name="msg_confirm_delete_canot_be_undone">This process cannot be undone.</string>
    <!-- END Global Messages -->

    <!-- Global Errors -->
    <string name="error_msg_mandatory">This field is required</string>
    <!-- END Global Messages -->

    <!-- Bottom Menu -->

    <string name="bottom_bill">BILL</string>
    <string name="bottom_task">TASK</string>
    <string name="bottom_inquiry">INQUIRY</string>
    <string name="bottom_blog">BLOG</string>
    <string name="bottom_package">PACKAGE</string>

    <!-- END Bottom Menu -->

    <!-- END Global Actions -->


    <!-- Add Package -->
    <string name="label_package_name">Package Name *</string>
    <string name="label_pack_desc">Package Description *</string>
    <string name="label_pack_price">Package Price *</string>
    <string name="label_pack_sp_qty">Required Number of Solar Panels</string>
    <string name="label_pack_rating">Inverter / UPS Rating</string>
    <string name="label_pack_batteries">Required Number of Batteries</string>
    <string name="label_pack_backup">Backup Hours of Batteries</string>
    <string name="label_pack_connection">Serial / Parrallel Connection *</string>
    <string name="label_pack_ch_current">Charging Current for Batteries</string>
    <string name="label_pack_ch_time">Charging Time for Batteries</string>
    <string name="helptxt_package_name">Enter Package Name</string>
    <string name="helptxt_pack_desc">Enter Package Description</string>
	<string name="helptxt_pack_price">Enter Package Price</string>
    <string name="helptxt_add_sp_qty">Enter Required Number of Solar Panels</string>
    <string name="helptxt_add_rating">Enter Inverter / UPS Rating</string>
    <string name="helptxt_add_batteries">Enter Required Number of Batteries</string>
    <string name="helptxt_add_backup">Enter Backup Hours of Batteries</string>
    <string name="helptxt_add_connection">Enter Connection Type</string>
    <string name="helptxt_add_ch_current">Enter Charging Current for Batteries</string>
    <string name="helptxt_add_ch_time">Enter Charging Time for Batteries</string>
    <string name="msg_package_add_succesfull">Package added successfully.</string>
    <string name="msg_package_add_unsuccesfull">Package addition unsuccessful.</string>
    <string name="error_msg_max_characters">Maximum characters allowed to be entered is</string>

    <!-- View Package -->
    <string name="label_sp_qty">No. of Solar Panels</string>
    <string name="label_rating">Inverter / UPS Rating</string>
    <string name="label_batteries">No. of Batteris</string>
    <string name="label_backup">Backup Hours of Batteries</string>
    <string name="label_serial_parallel">Serial / Parallel Connection</string>
    <string name="label_ch_current">Charging Current for Batteries</string>
    <string name="label_ch_time">Charging Time for Batteries</string>
    <string name="btn_get_package">GET PACKAGE</string>

    <!-- Modify Package -->
    <string name="label_package_id">PACKAGE ID</string>
    <string name="msg_package_update_succesfull">Package update successfully.</string>
    <string name="msg_package_update_unsuccesfull">Package update unsuccessful.</string>
    <string name="msg_oops"> OOPS </string>
    <string name="msg_unable_delete">Unable to delete at this moment</string>
    <string name="msg_retry_delete">There are customers using the package. Please retry after unlinking customers.</string>

    <!--Delete Package -->
    <string name="msg_package_delete_succesfull">Package delete successfully.</string>
    <string name="msg_package_delete_unsuccesfull">Package deletion unsuccessful.</string>
	
	<!-- Add Contact Details -->
    <string name="label_full_name">Full Name *</string>
    <string name="label_address">Address *</string>
    <string name="label_contact_no">Contact Number *</string>
    <string name="label_email">Email (Optional)</string>
	<string name="helptxt_full_name">Enter Full Name</string>
    <string name="helptxt_address">Enter Address</string>
    <string name="helptxt_contact_no">Enter Contact Number</string>
    <string name="helptxt_email">Enter Email Address</string>
	<string name="btn_payment">PROCEED TO PAYMENT</string>
	<string name="msg_contact_details_succesfull">Contact details added successfully.</string>
    <string name="msg_contact_details_unsuccesfull">Contact details addition unsuccessful.</string>

    <!-- Title Bar-->
    <string name="notification_title">Notification</string>
    <string name="setting">Settings</string>
    <string name="header_package">ALL PACKAGES</string>
    <string name="header_manage_package">MANAGE PACKAGE</string>
    <string name="header_create_package">CREATE ROUTE</string>

</resources>
