<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".packages.ModifyPackage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp">

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_package_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_package_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_pid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:editable="false"
                    android:fontFamily="@font/roboto"
                    android:inputType="none"
                    tools:ignore="Deprecated" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_weight="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_package_name_modify_package"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:hint="@string/label_package_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_pack_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:fontFamily="@font/roboto"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_description_modify_package"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/design_default_color_secondary_variant"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/design_default_color_secondary_variant"
                android:hint="@string/label_pack_desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_pack_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:fontFamily="@font/roboto"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonAddPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:onClick="updatePackage"
                android:text="@string/btn_update" />

            <Button
                android:id="@+id/del_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:onClick="deletePackage"
                android:text="@string/btn_delete" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/light_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/round_corner_rectangle"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/ic_sps"
        app:title="@string/header_manage_package" />

</androidx.constraintlayout.widget.ConstraintLayout>

